--- a/serector.html
+++ b/serector.html
@@ -9,6 +9,7 @@
     em { color: gray; }
     .keyword{font-weight: bold;}
     #lead{font-size: larger;}
+    em code{color: red;}
   </style>
 </head>
 <body>
