--- a/serector.html
+++ b/serector.html
@@ -7,6 +7,7 @@
   <title>CSSセレクター</title>
   <style>
     em { color: gray; }
+    em code{color: red;}
     .keyword{font-weight: bold;}
     #lead{font-size: larger;}
     em code{color: red;}
