--- a/serector.html
+++ b/serector.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width">
   <title>CSSセレクター</title>
   <style>
-    em { color: gray; }
+    * { color: gray; }
     em code{color: red;}
     .keyword{font-weight: bold;}
     #lead{font-size: larger;}
