--- a/serector.html
+++ b/serector.html
@@ -7,7 +7,7 @@
   <title>CSSセレクター</title>
   <style>
     * { color: gray; }
-    em code{color: red;}
+    em {color: red;}
     .keyword{font-weight: bold;}
     #lead{font-size: larger;}
     em code{color: red;}
