--- a/serector.html
+++ b/serector.html
@@ -7,10 +7,10 @@
   <title>CSSセレクター</title>
   <style>
     * { color: gray; }
-    em {color: red;}
-    .keyword{font-weight: bold;}
-    #lead{font-size: larger;}
-    em code{color: red;}
+    em {color: red; }
+    .keyword {font-weight: bold;}
+    #lead {font-size: larger}
+    em code {color: red;}
   </style>
 </head>
 <body>
