--- a/serector.html
+++ b/serector.html
@@ -3,9 +3,10 @@
 
 <head>
   <meta charset='utf-8' />
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width"/>
   <title>CSSセレクター</title>
   <style>
+
     * { color: gray; }
     em {color: red; }
     .keyword {font-weight: bold;}
