--- a/box.html
+++ b/box.html
@@ -7,13 +7,18 @@
   <style>
 #outer{
     background: black;
-    width: 300px;
-    height: 200px;
+    margin: 20px;
+    border: 20px yellow solid;
+    padding: 20px;
+    width: 100px;
+    height: 100px;
 }
 #inner{
     background: red;
+    margin: 10px;
     border: 10px blue solid;
     border-radius: 20px;
+    padding: 10px;
     width: 100px;
     height: 100px;
 }
