--- a/box.html
+++ b/box.html
@@ -8,7 +8,7 @@
 #outer{
     background: black;
     margin: 20px;
-    border: 20px yellow solid;
+    border: 20px rgb(129, 129, 128) solid;
     padding: 20px;
     width: 100px;
     height: 100px;
@@ -17,7 +17,7 @@
     background: red;
     margin: 10px;
     border: 10px blue solid;
-    border-radius: 20px;
+    border-radius: 50%;
     padding: 10px;
     width: 100px;
     height: 100px;
