--- a/box.html
+++ b/box.html
@@ -8,19 +8,19 @@
 #outer{
     background: black;
     margin: 20px;
-    border: 20px rgb(129, 129, 128) solid;
-    padding: 20px;
-    width: 100px;
-    height: 100px;
+    border: 20px yellow solid;
+    padding: 1px;
+    width: 600px;
+    height: 600px;
 }
 #inner{
     background: red;
-    margin: 10px;
-    border: 10px blue solid;
-    border-radius: 50%;
-    padding: 10px;
-    width: 100px;
-    height: 100px;
+    margin: 0px;
+    border: 150px blue solid;
+    border-radius: 500px;
+    padding: 0px;
+    width: 300px;
+    height: 300px;
 }
   </style>
 </head>
