--- a/position.html
+++ b/position.html
@@ -9,17 +9,20 @@
             #container{
                 position: relative; top: 100px; left: 100px;
                 background: red;
-                width: 400px;
+                border-radius: 100px;
+                width: 200px;
                 height: 200px;            
             }
             #boxA{
                 background: green;
-                width: 200px;
+                border-radius: 100px 0px 0px 0px;
+                width: 100px;
                 height: 100px;
             }
             #boxB{
                 position: fixed; top: 50px; left: 100px;
                 background: blue;
+                border-radius: 0px 0px 100px 0px;
                 width: 200px;
                 height: 100px;
             }
