--- a/position.html
+++ b/position.html
@@ -20,6 +20,7 @@
                 height: 100px;
             }
             #boxB{
+                position: relative; top: 150px; left: 150px;
                 background: blue;
                 border-radius: 0px 0px 100px 0px;
                 width: 100px;
